--- a/main.css
+++ b/main.css
@@ -167,3 +167,13 @@ button{
     opacity: 1;
     font-size: 17px;
 }
+
+::placeholder{
+    text-align: left;
+    padding-left: 32px;
+    letter-spacing: 0px;
+    color: #7D86A9;
+    opacity: 1;
+    font-size: 16px;
+    height: 21px;
+}
