--- a/main.css
+++ b/main.css
@@ -4,6 +4,11 @@ body{
     height: 1080px;
     background-color: #F3F4F9;
 }
+.parent{
+    width: 1920px;
+    height: 1080px; 
+    background-color: #F3F4F9;  
+}
 
 .containerOne{
     position: relative;
@@ -12,11 +17,16 @@ body{
     height: 160px;
 }
 
-.imageOne{
-    position:absolute;
-    display: inline-block;
-    padding: 44px 824px 44px 824px;
 
+.imageOne{
+    position: absolute;
+    display: block;
+    top: 44px;
+    left: 825px;
+    width: 271px;
+    height: 72px;
+    background: transparent url('img/UEP copy.png') 0% 0% no-repeat padding-box;
+    opacity: 1;
 }
 
 .hr{
@@ -26,68 +36,83 @@ body{
     display: block;
 }
 
-.loginbox{
-    padding-top: 26px;
-    background-color: #F3F4F9;
-    position: relative;
-    opacity: 1;
+.loginbox{ 
+    position: absolute;
+    display: block;
+    margin-top: 26px;
     top: 206px;
     left: 599px;
     width: 723px;
     height: 735px;
+    opacity: 1;
 }
 
 .loginForm{
-    position:absolute;
-    box-shadow: 0px 2px 14px #0000001A;
-    border-radius: 20px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    top: 80px;
-    left:80px;
+    position: absolute;
+    display: block;
+    margin: auto;
+    top: 286px;
+    left: 679px;
     width: 563px;
     height: 575px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 2px 14px #0000001A;
+    border-radius: 20px;
+    opacity: 1;;
 
 }
 
 .innerFormBox{
+    position: absolute;
+    display: block;
+    margin: auto;
     top: 366px;
     left: 759px;
     width: 403px;
     height: 415px;
-    display: block;
-    margin: 24px auto 32px auto;
+    opacity: 1;
 
 }
 
 .login{
+    position: absolute;
+    display: inline-block;
     margin-top: 0px;
-    /* width: 90px; */
+    top: 366px;
+    left: 916px;
+    width: 90px;
     height: 48px;
-    font-size: 36px;
-    display: block;
+    text-align: center;
     font: normal normal bold 36px/48px Roboto;
     letter-spacing: 0px;
     color: #29292B;
-    text-align: center;
-    margin-top: 80px;
+    opacity: 1;
     
 }
 
 .textOne{
+    position: absolute;
+    display: inline-block;
+    margin-top: 16px;
+    top: 430px;
+    left: 759px;
     width: 403px;
     height: 31px;
-    margin-top: 16px;
-    font-size: 18px;
-    display: block;
     text-align: center;
     font: normal normal normal 18px/24px Roboto;
     letter-spacing: 0px;
     color: #2A2F4D;
+    opacity: 1;
     
     
 }
 
-input[type=email]{
+#email{
+    position: absolute;
+    display: block;
+    margin-top: 24px;
+    top: 485px;
+    left: 760px;
     width: 402px;
     height: 50px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
@@ -97,8 +122,12 @@ input[type=email]{
 
 }
 
-input[type=password]{
+#password{
+    position: absolute;
+    display: block;
     margin-top: 32px;
+    top: 567px;
+    left: 760px;
     width: 402px;
     height: 50px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
@@ -106,39 +135,40 @@ input[type=password]{
     border-radius: 25px;
     opacity: 1;
 
-}
-
-input[type=submit]{
-    margin-top: 48px;
-    width: 402px;
-    height: 56px;
-    background: #FE077C 0% 0% no-repeat padding-box;
-    border-radius: 28px;
-    opacity: 1;
 }
 
 
 .forget-password{
-    margin-left: 3px;
-    font-size: 15px;
+    position: absolute;
+    display: inline-block;
+    top: 657px;
+    left: 760px;
     margin-top: 40px;
-    width: 121px;
     height: 20px;
     text-align: left;
     letter-spacing: 0px;
     color: #7D86A9;
     opacity: 1;
-    display: inline-block;
-   
 }
 
-.checkbox{
-    font-size: 14px;
+#check-one{
+    position: absolute;
+    display: inline-block;
+    margin-top: 40px;
+    top: 659px;
+    left: 1037px;
+    width: 17px;
+    height: 17px;
+    background: transparent url('img/check.png') 0% 0% no-repeat padding-box;
+    opacity: 1;
+}
+#rememberMe{
+    position: absolute;
     display: inline-block;
     top: 658px;
-    margin-left: 150px;
-    height: 19px;
+    left: 1064px;
     margin-top: 40px;
+    height: 19px;
     text-align: left;
     letter-spacing: 0px;
     color: #7D86A9;
@@ -146,17 +176,26 @@ input[type=submit]{
 }
 
 
-button{
-    /* top: 725px;
-    left: 760px; */
+#login-button{
+    position: absolute;
+    display: block;
+    top: 725px;
+    left: 760px;
     width: 402px;
     height: 56px;
-    margin-top: 40px;
+    margin-top: 48px;
     background: #FE077C 0% 0% no-repeat padding-box;
     border-radius: 28px;
     opacity: 1;
+
 }
-.submitTxt{
+
+
+.button-font{
+    display: block;
+    margin: auto;
+    top: 742px;
+    left: 937px;
     width: 48px;
     height: 23px;
     text-align: center;
@@ -165,7 +204,6 @@ button{
     color: #FFFFFF;
     text-transform: uppercase;
     opacity: 1;
-    font-size: 17px;
 }
 
 ::placeholder{
